--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -169,7 +169,7 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="co_factura">Dcumento*</label>
+                    <label for="co_factura">Documento*</label>
                     @Html.TextBoxFor(q => q.co_factura, new { @class = "form-control", @id = "co_factura" })
                     @Html.ValidationMessageFor(q => q.co_factura, "", new { @class = "text-danger" })
                 </div>
@@ -501,13 +501,6 @@
             get_list_tipo_doc();
         }
     });
-    $("#co_plazo").change(function () {
-        var plazo = Number($("#co_plazo").val());
-        if (plazo > 0) {
-            var new_date = moment(co_FechaFactura.GetDate(), "DD-MM-YYYY").add(plazo, 'days');
-            co_FechaFactura_vct.SetDate(new Date(new_date));
-        };
-    });
 
     $("#IdIden_credito").change(function () {
 
@@ -544,117 +537,71 @@
         }
         else
             $('#co_total').val(0.00);
-        if(iva>0)
+        if (iva > 0)
             $('#co_Por_iva').val(12);
         else
             $('#co_Por_iva').val(0.00);
 
 
+        function rellenar_ceros_izquierda() {
+            var str = "" + Number($("#co_factura").val());
+            var pad = "000000000";
+            var doc = pad.substring(0, pad.length - str.length) + str;
 
-    }
-    $("#Num_cuotas").keyup(function () {
-        get_cuotas();
-    });
-    $("#Dias_plazo").keyup(function () {
-        get_cuotas();
-    });
-    $("#Total_a_pagar").keyup(function () {
-        get_cuotas();
-    });
+            $("#co_factura").val(doc);
+        }
 
-    function rellenar_ceros_izquierda() {
-        var str = "" + Number($("#co_factura").val());
-        var pad = "000000000";
-        var doc = pad.substring(0, pad.length - str.length) + str;
+        function rellenar_ceros_izq() {
+            var str = "" + Number($("#num_docu_Modificar").val());
+            var pad = "000000000";
+            var doc = pad.substring(0, pad.length - str.length) + str;
 
-        $("#co_factura").val(doc);
-    }
+            $("#num_docu_Modificar").val(doc);
+        }
 
-    function rellenar_ceros_izq() {
-        var str = "" + Number($("#num_docu_Modificar").val());
-        var pad = "000000000";
-        var doc = pad.substring(0, pad.length - str.length) + str;
+        // obtener tipo de documento
+        function get_list_tipo_doc() {
 
-        $("#num_docu_Modificar").val(doc);
-    }
-    // calcular cuotas
-    function get_cuotas()
-    {
 
-        var Fecha_i = Fecha_inicio.GetDate();
-        var Num_cuot = $("#Num_cuotas").val();
-        var Dias_plaz = $("#Dias_plazo").val();
-        var Total_a_pag = $("#Total_a_pagar").val();
+            get_info_proveedor();
+            if (IdProveedor.GetValue() > 0 && $("#IdIden_credito").val() != "") {
+                var datos = {
+                    IdProveedor: IdProveedor.GetValue(),
+                    codigoSRI: $("#IdIden_credito").val(),
+                    IdEmpresa: $("#IdEmpresa").val()
 
-        if (Num_cuot > 0 && Dias_plaz > 0 && Total_a_pag > 0) {
+                }
+                $.ajax({
+                    type: 'POST',
+                    data: JSON.stringify(datos),
+                    url: '@Url.Action("get_list_tipo_doc", "Deudas", new { Area = "CuentasPorPagar" })',
+                    async: false,
+                    bDeferRender: true,
+                    bProcessing: true,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data) {
+                        $.each(data, function (i, row) {
+                            $("#IdOrden_giro_Tipo").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
+                            $("#cmbTipoDocu_modif").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
+                        });
+                    },
+                    error: function (error) {
+                    }
+                });
+            }
+        };
+        // armar diario contable
+
+        function armar_diario() {
             var datos = {
-                Fecha_inicio: Fecha_i,
-                Num_cuotas: Num_cuot,
-                Dias_plazo: Dias_plaz,
-                Total_a_pagar: Total_a_pag,
+                IdProveedor: IdProveedor.GetValue(),
+                co_subtotal_iva: $("#co_subtotal_iva").val(),
+                co_subtotal_siniva: $("#co_subtotal_siniva").val(),
+                co_valoriva: $("#co_valoriva").val(),
+                co_total: $("#co_total").val(),
+                observacion: $("#observacion").val(),
                 IdTransaccionSession: $("#IdTransaccionSession").val()
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("calcular_cuotas","Deudas", new { Area = "CuentasPorPagar" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    GridViewPartial_documento_cuotas_det.PerformCallback();
-                },
-                error: function (error) {
-                }
-            });
-        }
-    };
-
-  // obtener tipo de documento
-    function get_list_tipo_doc() {
-
-
-        get_info_proveedor();
-        if (IdProveedor.GetValue() > 0 && $("#IdIden_credito").val() != "") {
-            var datos = {
-                IdProveedor:  IdProveedor.GetValue(),
-                codigoSRI: $("#IdIden_credito").val(),
-                IdEmpresa: $("#IdEmpresa").val()
-
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_list_tipo_doc", "Deudas", new { Area = "CuentasPorPagar" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    $.each(data, function (i, row) {
-                        $("#IdOrden_giro_Tipo").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
-                        $("#cmbTipoDocu_modif").append("<option value=" + row.CodTipoDocumento + ">" + row.Descripcion + "</option>");
-                    });
-                },
-                error: function (error) {
-                }
-            });
-        }
-    };
-    // armar diario contable
-
-    function armar_diario() {
-            var datos = {
-            IdProveedor :  IdProveedor.GetValue(),
-            co_subtotal_iva : $("#co_subtotal_iva").val(),
-            co_subtotal_siniva : $("#co_subtotal_siniva").val(),
-            co_valoriva : $("#co_valoriva").val(),
-            co_total : $("#co_total").val(),
-            observacion: $("#observacion").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()
             }
             $.ajax({
                 type: 'POST',
@@ -666,125 +613,124 @@
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                 GridViewPartial_deudas_dc.PerformCallback();
+                    GridViewPartial_deudas_dc.PerformCallback();
                 },
                 error: function (error) {
                 }
             });
 
-    };
+        };
 
 
 
-    function get_info_proveedor() {
+        function get_info_proveedor() {
 
 
 
-        if (IdProveedor.GetValue() > 0)  {
-            var datos = {
-                IdProveedor: IdProveedor.GetValue()
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_info", "Proveedor", new { Area = "CuentasPorPagar" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    if (data.pr_plazo == 0)
-                    {
-                        $("#co_plazo").val(1);
-                    }
-                    else
-                    {
-                        var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
-                        co_FechaFactura_vct.SetValue(new Date(date));
-                        //co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
-                    }
-
-
-                },
-                error: function (error) {
-                }
-            });
-        }
-    };
-
-    function cargar_bodega() {
-        $("#IdBodega").empty();
-
-        var sucursal = $("#IdSucursal").val();
-
-            var datos = {
-                IdEmpresa: $("#IdEmpresa").val(),
-            IdSucursal: sucursal
-        }
-
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_bodega", "InventarioReportes", new { Area = "Reportes" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $.each(data, function (i, row) {
-                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
-                });
-            },
-            error: function (error) {
-            }
-        });
-    };
-            function GetInfo_Producto(s, e) {
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdProducto: s.GetValue()
-
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("GetInfo_Producto", "Deudas",new { Area = "CuentasPorPagar"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridView_deuda_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
-            },
-            error: function (error) {
-            }
-        });
-            };
-
-             function armar_diario_retencion() {
-
+            if (IdProveedor.GetValue() > 0) {
                 var datos = {
-                    IdProveedor: IdProveedor.GetValue(),
-                    IdTransaccionSession: $("#IdTransaccionSession").val()
+                    IdProveedor: IdProveedor.GetValue()
                 }
                 $.ajax({
                     type: 'POST',
                     data: JSON.stringify(datos),
-                    url: '@Url.Action("armar_diario_retencion", "Retencion", new { Area = "CuentasPorPagar" })',
+                    url: '@Url.Action("get_info", "Proveedor", new { Area = "CuentasPorPagar" })',
                     async: false,
                     bDeferRender: true,
                     bProcessing: true,
                     dataType: 'json',
                     contentType: 'application/json; charset=utf-8',
                     success: function (data) {
-                        GridViewPartial_retencio_dc.PerformCallback();
+                        if (data.pr_plazo == 0) {
+                            $("#co_plazo").val(1);
+                        }
+                        else {
+                            var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
+                            co_FechaFactura_vct.SetValue(new Date(date));
+                            //co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
+                        }
+
+
                     },
                     error: function (error) {
                     }
                 });
+            }
+        };
 
-    };
+        function cargar_bodega() {
+            $("#IdBodega").empty();
+
+            var sucursal = $("#IdSucursal").val();
+
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdSucursal: sucursal
+            }
+
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("cargar_bodega", "InventarioReportes", new { Area = "Reportes" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $.each(data, function (i, row) {
+                        $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                    });
+                },
+                error: function (error) {
+                }
+            });
+        };
+        function GetInfo_Producto(s, e) {
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                IdProducto: s.GetValue()
+
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("GetInfo_Producto", "Deudas",new { Area = "CuentasPorPagar"})',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    GridView_deuda_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
+                },
+                error: function (error) {
+                }
+            });
+        };
+
+        function armar_diario_retencion() {
+
+            var datos = {
+                IdProveedor: IdProveedor.GetValue(),
+                IdTransaccionSession: $("#IdTransaccionSession").val()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("armar_diario_retencion", "Retencion", new { Area = "CuentasPorPagar" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    GridViewPartial_retencio_dc.PerformCallback();
+                },
+                error: function (error) {
+                }
+            });
+
+        };
+    }
 </script>
