--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Archivo_Transferencia_Info
 @{
-    ViewBag.Title = "Nueva archivo bancario";
+    ViewBag.Title = "Anular archivo bancario";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
