--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/_GridViewPartial_centrocosto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/_GridViewPartial_centrocosto.cshtml
@@ -86,7 +86,7 @@
         settings.Columns.Add("cc_Descripcion","Centro costo").Width = System.Web.UI.WebControls.Unit.Percentage(25);
         settings.Columns.Add("IdCentroCostoPadre", "ID padre").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("cc_Descripcion_Padre", "Centro costo padre").Width = System.Web.UI.WebControls.Unit.Percentage(25);
-        settings.Columns.Add("IdNivel","Nivel").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("nv_Descripcion", "Nivel").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EsMovimiento";
