--- a/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Modificar.cshtml
@@ -11,6 +11,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "Impuesto", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdCod_Impuesto)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
