--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
@@ -142,7 +142,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
@@ -159,7 +159,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
 
     <div class="row">
