--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_CmbProveedor_IngresoOrdenCompra.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_CmbProveedor_IngresoOrdenCompra.cshtml
@@ -3,7 +3,7 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdProveedor";
+        settings.Name = "IdResponsable";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
@@ -16,15 +16,15 @@
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
-        
+
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 70);
         settings.Properties.FilterMinLength = 3;
 
     })
-    .BindList(new Core.Erp.Web.Areas.Compras.Controllers.OrdenCompraLocalController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Compras.Controllers.OrdenCompraLocalController().get_info_bajo_demanda)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.Compras.com_ordencompra_local_Info) ? "" : (Model == 0 ? "" : Model));
+    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioOrdenCompraController().get_list_bajo_demanda_proveedor, new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioOrdenCompraController().get_info_bajo_demanda_proveedor)
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info) ? "" : (Model == 0 ? "" : Model) );
 
 }
 @comboBox.GetHtml()
