--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Index.cshtml
@@ -33,12 +33,18 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal*</label>
                             @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="IdBodega">Bodega*</label>
+                            @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
+                            @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-2">
@@ -100,7 +106,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_IngresoOrdenCompra", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_IngresoOrdenCompra", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
@@ -109,3 +115,39 @@
         <!-- /.box-footer-->
     </div>
 }
+<script type="text/javascript">
+    $(function () {
+        CargarBodega();
+
+        $("#IdSucursal").change(function () {
+            CargarBodega();
+        });
+    });
+
+function CargarBodega() {
+    $("#IdBodega").empty();
+
+    var datos = {
+        IdEmpresa: $("#IdEmpresa").val(),
+        IdSucursal: $("#IdSucursal").val()
+    }
+
+    $.ajax({
+        type: 'POST',
+        data: JSON.stringify(datos),
+        url: '@Url.Action("CargarBodega", "IngresoInventarioOrdenCompra", new { Area = "Inventario" })',
+        async: false,
+        bDeferRender: true,
+        bProcessing: true,
+        dataType: 'json',
+        contentType: 'application/json; charset=utf-8',
+        success: function (data) {
+        $.each(data, function (i, row) {
+            $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+        });
+        },
+        error: function (error) {
+        }
+        });
+    };
+</script>
