--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_IngresoOrdenCompra.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_IngresoOrdenCompra.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_IngresoOrdenCompra";
-        settings.CallbackRouteValues = new { Controller = "IngresoInventarioOrdenCompra", Action = "GridViewPartial_IngresoOrdenCompra", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.CallbackRouteValues = new { Controller = "IngresoInventarioOrdenCompra", Action = "GridViewPartial_IngresoOrdenCompra", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal, IdBodega = ViewBag.IdBodega };
         settings.KeyFieldName = "IdNumMovi";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
