--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/_GridViewPartial_inv_det.cshtml
@@ -7,12 +7,12 @@
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "IngresoInventario", Action = "EditingAddNew", Area = "Inventario" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "IngresoInventario", Action = "EditingUpdate", Area = "Inventario" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "IngresoInventario", Action = "EditingDelete", Area = "Inventario" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "IngresoInventarioOrdenCompra", Action = "EditingAddNew", Area = "Inventario" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "IngresoInventarioOrdenCompra", Action = "EditingUpdate", Area = "Inventario" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "IngresoInventarioOrdenCompra", Action = "EditingDelete", Area = "Inventario" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
@@ -30,7 +30,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-   
+
 
         settings.Columns.Add(column =>
         {
@@ -46,32 +46,32 @@
             column.Caption = "Producto";
             column.Width = Unit.Percentage(30);
             column.Visible = false;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.SetEditItemTemplateContent(c =>
             {
                 Html.RenderPartial("_CmbProducto_IngresoInventario", DataBinder.Eval(c.DataItem, "IdProducto"));
             });
         });
-        //settings.Columns.Add(column =>
-        //{
-        //    column.FieldName = "IdUnidadMedida_sinConversion";
-        //    column.Caption = "Unidad de medida";
-        //    column.Width = Unit.Percentage(20);
-        //    column.EditorProperties().ComboBox(p =>
-        //    {
-        //        p.Columns.Add("descripcion", "Descripción").Width = Unit.Percentage(100);
-        //        p.TextField = "descripcion";
-        //        p.ValueField = "IdUnidadMedida";
-        //        p.ValueType = typeof(string);
-        //        p.DataSource = ViewBag.lst_unidad;
-        //    });
-        //});
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdUnidadMedida";
+            column.FieldName = "dm_cantidad_sinConversion";
+            column.Caption = "Cantidad";
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+                q.ClientSideEvents.ValueChanged = "function(s,e,){ValidarCantidad()}";
+            });
+
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdUnidadMedida_sinConversion";
             column.Caption = "Unidad de medida";
             column.Width = Unit.Percentage(20);
-            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
             column.EditorProperties().ComboBox(p =>
             {
                 p.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "CargarUnidadMedida", Area = "Inventario" };
@@ -86,16 +86,10 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "dm_cantidad_sinConversion";
-            column.Caption = "cantidad";
-            column.Width = Unit.Percentage(15);
-
-        });
-        settings.Columns.Add(column =>
-        {
             column.FieldName = "mv_costo_sinConversion";
             column.Caption = "Costo";
             column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
